css/main.css
body { font-family: omnes-pro, Helvetica, Helvetica Neue, Arial, sans-serif; color:#8e8b8a; }

/* all tiers are automatically clearfix'd */
.tier:before,
.tier:after { content:""; display:table; }
.tier:after { clear:both; }
.tier { zoom:1; }

a{
  color:#8e8b8a; text-decoration:none;
}
a:hover {
  color:#8e8b8a;text-decoration:underline;
}
a:visited{
  color:#8e8b8a;
}

.content { width:800px; margin:7% auto 0; text-align:left; }

.pane p { font-size:40px; }

.pane label { 
	display:block; float:left; padding:0 25px; 
	font-size:40px; 
	font-weight:300;
}
.pane input[type=text] { 
	display:block; float:left; width:400px; padding:0px 15px 5px 15px; font-family: omnes-pro, Helvetica, Helvetica Neue, Arial, sans-serif; font-weight:600;
	font-size:40px; border:1px solid #e0e0e0; outline:0; color:#8e8b8a; -moz-box-shadow:inset 0px 0px 20px rgba(0,0,0,0.2);
	-webkit-box-shadow:inset 0px 0px 20px rgba(0,0,0,0.2); box-shadow:inset 0px 0px 20px rgba(0,0,0,0.2); -moz-border-radius:3px;
	-webkit-border-radius:3px; border-radius:3px;
	/*background-color: #FCFBFB;*/
	background: url(../img/bg_doc.png) top left repeat;
}
.pane input[type=text]:focus { 
	-moz-box-shadow:0 0 15px #5bb7eb, inset 0px 0px 20px rgba(0,0,0,0.2);
	-webkit-box-shadow:0 0 15px #5bb7eb, inset 0px 0px 20px rgba(0,0,0,0.2);
	box-shadow:0 0 15px #5bb7eb, inset 0px 0px 20px rgba(0,0,0,0.2);
	border:1px solid #84cef5;
}
.pane input[type=text].time-component { width:51px; text-align: center;}

.input-sep { display:block; float:left; font-family: omnes-pro, Helvetica, Helvetica Neue, Arial, sans-serif; font-weight:300; margin: 0 10px; font-size:48px; position: relative; top: -8px;}

#countdown-minutes {margin-right:15px;}
#countdown-timeperiod {width:65px;}

.start-pane .tier { text-align:center; margin:60px 0 0; }
.start-pane .tier.countdown-details { margin-top: 20px; }
.start-pane .tier:first-child { margin-top:0; text-align:center;}
.start-pane #countdown-date { width:200px; text-align: center; }
.start-pane label.its-almost { width:270px; font-size: 60px;}
.start-pane input[type=text]#countdown-name { font-size: 60px; }
.start-pane input[type=text] { position: relative; top: -4px; }
.start-pane p.url { margin:0px 0 0 338px; font-weight:300; font-size:18px; color:#b9b6b5; }
.start-pane p img { margin-left:5px; }

.timer-pane { }
.timer-pane .description { text-align:center;font-weight:300; font-size:60px;
  margin-bottom:40px; }
.timer-pane .description span.name { font-weight:600; }
.timer-pane .timer { font-weight:300; }
.timer-pane .timer span { font-weight:600;}
.timer-pane .timer span.milliseconds { font-size:0.5em; color:#ccc7c6;}


.footer { position:fixed; bottom:0; width:100%; text-align:left; background-color:#f0efee; border-top:1px solid #eaeaea;}
.footer .tier { padding:17px 30px 22px; }

.footer .social { text-align:center;width:100%; font-size:16px; padding-top:0px; }
.footer .social a { margin-left:10px; color: #A5A2A2; font-weight:400; text-shadow: 1px 1px 1px #ffffff; filter: dropshadow(color=#ffffff, offx=1, offy=1); padding-right: 0; margin-right: 0;}
.footer .social a:hover { color: #8e8b8a; text-shadow: 1px 1px 0px #E5E1E1; filter: dropshadow(color=#E5E1E1, offx=1, offy=1); text-decoration: none; }
.footer .social a:first-child { margin-left:0px; }

.footer .logo { position:absolute; right:30px; top:20px; }
.footer .logo a { display:block; width:92px; height:27px; background-image:url("../img/tc_logo.png"); position: relative; top: -2px;}
.footer .logo a span { display:none; }

a.btn { padding: 5px 25px 15px 25px; -webkit-border-radius:3px; -moz-border-radius:3px; border-radius:3px; font-size:36px; font-weight:600; color:#FFF; text-decoration:none; display:inline-block; text-shadow:-1px -1px 1px rgba(94,91,91,0.45); border:1px solid #a0a09f; -webkit-box-shadow:1px 1px 3px rgba(0,0,0,0.35); -moz-box-shadow:1px 1px 3px rgba(0,0,0,0.35); box-shadow:1px 1px 3px rgba(0,0,0,0.35); cursor:pointer; position:relative;
	/* SHIT-TON OF GRADIENT STUFF */
	background-color: #b3b2b1; /*old browsers*/
	background: -moz-linear-gradient(top, #bebdbc 0%, #b7b7b6 50%, #a8a7a6 51%, #9a9998 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#bebdbc), color-stop(50%,#b7b7b6), color-stop(51%,#a8a7a6), color-stop(100%,#9a9998)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top, #bebdbc 0%,#b7b7b6 50%,#a8a7a6 51%,#9a9998 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top, #bebdbc 0%,#b7b7b6 50%,#a8a7a6 51%,#9a9998 100%); /* Opera11.10+ */
	background: -ms-linear-gradient(top, #bebdbc 0%,#b7b7b6 50%,#a8a7a6 51%,#9a9998 100%); /* IE10+ */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bebdbc', endColorstr='#9a9998',GradientType=0 ); /* IE6-9 */
	background: linear-gradient(top, #bebdbc 0%,#b7b7b6 50%,#a8a7a6 51%,#9a9998 100%); /* W3C */
	}	
a.btn:hover { -webkit-box-shadow:1px 1px 7px rgba(0,0,0,0.35); -moz-box-shadow:1px 1px 7px rgba(0,0,0,0.35); box-shadow:1px 1px 7px rgba(0,0,0,0.35); cursor:pointer;
	/* SHIT-TON OF GRADIENT STUFF */
	background: #afafae; /* Old browsers */
	background: -moz-linear-gradient(top, #afafae 0%, #a8a8a8 50%, #999897 51%, #8c8b8a 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#afafae), color-stop(50%,#a8a8a8), color-stop(51%,#999897), color-stop(100%,#8c8b8a)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top, #afafae 0%,#a8a8a8 50%,#999897 51%,#8c8b8a 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top, #afafae 0%,#a8a8a8 50%,#999897 51%,#8c8b8a 100%); /* Opera11.10+ */
	background: -ms-linear-gradient(top, #afafae 0%,#a8a8a8 50%,#999897 51%,#8c8b8a 100%); /* IE10+ */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#afafae', endColorstr='#8c8b8a',GradientType=0 ); /* IE6-9 */
	background: linear-gradient(top, #afafae 0%,#a8a8a8 50%,#999897 51%,#8c8b8a 100%); /* W3C */
	} 
a.btn:active { -webkit-box-shadow:1px 1px 3px rgba(0,0,0,0.35); -moz-box-shadow:1px 1px 3px rgba(0,0,0,0.35); box-shadow:1px 1px 3px rgba(0,0,0,0.35); cursor:pointer; color:#e5e5e5; top:1px; left:1px;
	/* SHIT-TON OF GRADIENT STUFF */
	background: #969594; /* Old browsers */
	background: -moz-linear-gradient(top, #969594 0%, #a5a4a4 49%, #a8a8a8 50%, #afafae 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#969594), color-stop(49%,#a5a4a4), color-stop(50%,#a8a8a8), color-stop(100%,#afafae)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top, #969594 0%,#a5a4a4 49%,#a8a8a8 50%,#afafae 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top, #969594 0%,#a5a4a4 49%,#a8a8a8 50%,#afafae 100%); /* Opera11.10+ */
	background: -ms-linear-gradient(top, #969594 0%,#a5a4a4 49%,#a8a8a8 50%,#afafae 100%); /* IE10+ */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#969594', endColorstr='#afafae',GradientType=0 ); /* IE6-9 */
	background: linear-gradient(top, #969594 0%,#a5a4a4 49%,#a8a8a8 50%,#afafae 100%); /* W3C */
	}
a.btn.disabled {
  opacity:0.5;
}

.spacer { display: inline-block; width: 2px; }

body.ipad .tier.countdown-name input[type="text"] { background-image: -webkit-gradient(
	radial, 50% 50%, 190, 50% 50%, 500, from(rgba(0,0,0,0)), to(rgba(0,0,0,.5))
);}
body.ipad .tier.countdown-details input[type="text"] { background-image: -webkit-gradient(
	radial, 50% 50%, 125, 50% 50%, 250, from(rgba(0,0,0,0)), to(rgba(0,0,0,.5))
);}

